--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,51 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.summerclouds</groupId>
+  <groupId>org.summerclouds.common</groupId>
   <artifactId>common-bom</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
+	
+  <properties>
+  	<common.core.version>0.0.1-SNAPSHOT</common.core.version>
+  	<common.crypt.version>0.0.1-SNAPSHOT</common.crypt.version>
+  	<common.rest.version>0.0.1-SNAPSHOT</common.rest.version>
+  	<common.security.version>0.0.1-SNAPSHOT</common.security.version>
+  	<common.sleuth.version>0.0.1-SNAPSHOT</common.sleuth.version>
+  	<common.junit.version>0.0.1-SNAPSHOT</common.junit.version>
+  </properties>  
   
   <dependencyManagement>
   	<dependencies>
+		<dependency>
+			<groupId>org.summerclouds.common</groupId>
+			<artifactId>common-core-spring-boot-starter</artifactId>
+			<version>${common.core.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.summerclouds.common</groupId>
+			<artifactId>common-crypt-spring-boot-starter</artifactId>
+			<version>${common.crypt.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.summerclouds.common</groupId>
+			<artifactId>common-rest-spring-boot-starter</artifactId>
+			<version>${common.rest.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.summerclouds.common</groupId>
+			<artifactId>common-security-spring-boot-starter</artifactId>
+			<version>${common.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.summerclouds.common</groupId>
+			<artifactId>common-sleuth-spring-boot-starter</artifactId>
+			<version>${common.sleuth.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.summerclouds.common</groupId>
+			<artifactId>common-junit</artifactId>
+			<version>${common.junit.version}</version>
+		</dependency>
   		
   	</dependencies>
   </dependencyManagement>
