add release configuration

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,14 @@
   	<common-security.version>0.0.1-SNAPSHOT</common-security.version>
   	<common-sleuth.version>0.0.1-SNAPSHOT</common-sleuth.version>
   	<common-junit.version>0.0.1-SNAPSHOT</common-junit.version>
+
+	  <maven-git-code-format.version>1.32</maven-git-code-format.version>
+	  <nexus.plugin.version>1.6.13</nexus.plugin.version>
+	  <gpg.plugin.version>3.0.1</gpg.plugin.version>
+	  <source.plugin>2.2.1</source.plugin>
+	  <tmpl.plugin.version>2.0.0</tmpl.plugin.version>
+	  <license.plugin.version>2.11.1</license.plugin.version>
+
   </properties>  
   
   <dependencyManagement>
@@ -49,5 +57,132 @@
   		
   	</dependencies>
   </dependencyManagement>
-  
+	<profiles>
+		<profile>
+			<id>release</id>
+			<distributionManagement>
+				<snapshotRepository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+				</snapshotRepository>
+				<repository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+				</repository>
+			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>${nexus.plugin.version}</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>${gpg.plugin.version}</version>
+						<configuration>
+							<passphraseServerId>gpg.passphrase</passphraseServerId>
+						</configuration>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>${source.plugin}</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>de.mhus.mvn.plugin</groupId>
+						<version>${tmpl.plugin.version}</version>
+						<artifactId>tmpl-maven-plugin</artifactId>
+						<configuration>
+							<files>
+								<directory>${basedir}</directory>
+								<includes>
+									<include>**/*</include>
+								</includes>
+							</files>
+						</configuration>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>tmpl</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>de.mhus.mvn.plugin</groupId>
+						<artifactId>license-maven-plugin</artifactId>
+						<version>${license.plugin.version}</version>
+						<configuration>
+							<aggregate>true</aggregate>
+							<header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
+							<properties>
+								<owner>Mike Hummel</owner>
+								<email>mh@mhus.de</email>
+							</properties>
+							<excludes>
+								<exclude>README.*</exclude>
+								<exclude>readme.*</exclude>
+								<exclude>LICENSE</exclude>
+								<exclude>LICENSE_HEADER</exclude>
+								<exclude>src/test/resources/**</exclude>
+								<exclude>src/main/resources/**</exclude>
+								<exclude>mhu-liferay-theme/src/main/webapp/**</exclude>
+								<exclude>docs/**</exclude>
+							</excludes>
+						</configuration>
+						<executions>
+							<execution>
+								<goals>
+									<goal>format</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- https://github.com/Cosium/maven-git-code-format -->
+					<!-- https://en.wikipedia.org/wiki/Glob_(programming) -->
+					<plugin>
+						<groupId>com.cosium.code</groupId>
+						<artifactId>maven-git-code-format</artifactId>
+						<version>${maven-git-code-format.version}</version>
+						<configuration>
+							<googleJavaFormatOptions>
+								<aosp>true</aosp>
+								<fixImportsOnly>false</fixImportsOnly>
+								<skipSortingImports>true</skipSortingImports>
+								<skipRemovingUnusedImports>false</skipRemovingUnusedImports>
+							</googleJavaFormatOptions>
+							<globPattern>**/[!_]*</globPattern>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+
+		</profile>
+	</profiles>
 </project>
