--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!--
 
     Copyright (C) 2022 Mike Hummel (mh@mhus.de)
@@ -19,16 +20,16 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.summerclouds.common</groupId>
   <artifactId>common-bom</artifactId>
-  <version>0.0.1</version>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 	
   <properties>
-  	<common-core.version>0.0.1</common-core.version>
-  	<common-crypt.version>0.0.1</common-crypt.version>
-  	<common-rest.version>0.0.1</common-rest.version>
-  	<common-security.version>0.0.1</common-security.version>
-  	<common-sleuth.version>0.0.1</common-sleuth.version>
-  	<common-junit.version>0.0.1</common-junit.version>
+  	<common-core.version>0.1.0-SNAPSHOT</common-core.version>
+  	<common-crypt.version>0.1.0-SNAPSHOT</common-crypt.version>
+  	<common-rest.version>0.1.0-SNAPSHOT</common-rest.version>
+  	<common-security.version>0.1.0-SNAPSHOT</common-security.version>
+  	<common-sleuth.version>0.1.0-SNAPSHOT</common-sleuth.version>
+  	<common-junit.version>0.1.0-SNAPSHOT</common-junit.version>
 
 	  <maven-git-code-format.version>1.32</maven-git-code-format.version>
 	  <nexus.plugin.version>1.6.13</nexus.plugin.version>
